BSTest/test/Test1_6N0_0.mpr
mscdocument Test1_6N0;
msc Test1_6N0;
Simulator: instance;
Strategy: instance;
Simulator: out /*{@0}*/InitDataComplete,1 to Strategy;
Strategy: in /*{@0}*/InitDataComplete,1 from Simulator;
Simulator: out /*{@0}*/ShipsCurrentState,2(1,(: (. 1, 1, 2, 0, 5, 70, (. 180, 75 .), (: 15, 15, 3, 0 :) .), (. 2, 1, 3, 0, 4, 70, (. 180, 65 .), (: 15, 15, 3, 0 :) .) :)) to Strategy;
Strategy: in /*{@0}*/ShipsCurrentState,2(1,(: (. 1, 1, 2, 0, 5, 70, (. 180, 75 .), (: 15, 15, 3, 0 :) .), (. 2, 1, 3, 0, 4, 70, (. 180, 65 .), (: 15, 15, 3, 0 :) .) :)) from Simulator;
Simulator: out /*{@0}*/StartSimulation,3(0) to Strategy;
Strategy: in /*{@0}*/StartSimulation,3(0) from Simulator;
all: condition /*{@4094}*/ERROR comment '<!TAT_ERR_TIMEOUT(Trace0,Event4)!>';
Simulator: endinstance;
Strategy: endinstance;
endmsc;
